enhance API check phone number
